--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,7 +20,7 @@ project (Yoshimi)
 cmake_minimum_required (VERSION 2.6)
 cmake_policy (VERSION 2.6)
 cmake_policy (SET CMP0004 OLD)
-set (YOSHIMI_VERSION "0.062-pre7")
+set (YOSHIMI_VERSION "0.062-pre8")
 file (WRITE version.txt "${YOSHIMI_VERSION}")
 
 set (CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -49,7 +49,7 @@ check_c_source_compiles (
 if (HAS_JACK_SESSION)
     option (JackSessionSupport "Include Jack Session Support" ON)
 else (HAS_JACK_SESSION)
-    option (JackSessionSupport "Include Jack Session Support" OFF)
+    set (JackSessionSupport OFF)
 endif (HAS_JACK_SESSION)
 
 set (DefaultAudio jack CACHE STRING "Default audio driver - alsa or jack")
@@ -276,7 +276,7 @@ add_definitions (-DNUM_INS_EFX=8)
 add_definitions (-DNUM_PART_EFX=3)
 add_definitions (-DNUM_KIT_ITEMS=16)
 add_definitions (-DVELOCITY_MAX_SCALE=8.0f)
-add_definitions (-DMAX_EQ_BANDS=8) # MAX_EQ_BANDS must be less than 20")
+add_definitions (-DMAX_EQ_BANDS=8) # MAX_EQ_BANDS must be less than 20
 add_definitions (-DMAX_FILTER_STAGES=5)
 add_definitions (-DFF_MAX_VOWELS=6)
 add_definitions (-DFF_MAX_FORMANTS=12)
