Applied patch from SourceForge ticket #3487751 (Simplify desktop file and install it and the icon file). Thanks to Tim harder for this patch.

--- a/desktop/yoshimi.desktop.in
+++ b/desktop/yoshimi.desktop.in
@@ -5,8 +5,8 @@ GenericName=Synthesizer
 Version=@YOSHIMI_VERSION@
 Type=Application
 Categories=AudioVideo;X-Sound;Audio;
-Exec=@CMAKE_INSTALL_PREFIX@/bin/yoshimi
-TryExec=@CMAKE_INSTALL_PREFIX@/bin/yoshimi
+Exec=yoshimi
+TryExec=yoshimi
 Terminal=false
 StartupNotify=true
-Icon=@CMAKE_INSTALL_PREFIX@/share/yoshimi/pink_robot_icon.png
+Icon=yoshimi
