--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -197,6 +197,11 @@ else (BuildForDebug)
     message (STATUS "Building for ${CMAKE_BUILD_TYPE}, flags: ${CMAKE_CXX_FLAGS_RELEASE}")
 endif (BuildForDebug)
 
+configure_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/../desktop/yoshimi.desktop.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/yoshimi.desktop"
+    IMMEDIATE @ONLY)
+
 set (DSP_sources
     DSP/FFTwrapper.cpp  DSP/AnalogFilter.cpp  DSP/FormantFilter.cpp
     DSP/SVFilter.cpp  DSP/Filter.cpp  DSP/Unison.cpp
@@ -367,6 +372,11 @@ install (DIRECTORY ../presets DESTINATION share/yoshimi
         GROUP_READ GROUP_WRITE GROUP_EXECUTE
         WORLD_READ WORLD_EXECUTE
 )
+
+install (FILES ${CMAKE_CURRENT_BINARY_DIR}/yoshimi.desktop
+    DESTINATION share/applications)
+install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/yoshimi.png
+    DESTINATION share/pixmaps)
 
 set_directory_properties (PROPERTIES
     ADDITIONAL_MAKE_CLEAN_FILES "${CMAKE_SOURCE_DIR}/*UI.c* ${CMAKE_SOURCE_DIR}/src/*UI.h"
