Yoshimi has new knobs! Thanks to Alessandro Preziosi (aka licnep)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -155,6 +155,16 @@ else(FONTCONFIG_FOUND)
     message (FATAL_ERROR "fontconfig>=0.22 required but not found")
 endif(FONTCONFIG_FOUND)
 
+
+# libcairo
+pkg_check_modules (LIBCAIRO REQUIRED cairo)
+if (LIBCAIRO_FOUND)
+    message (STATUS "Found libcairo ${LIBCAIRO_VERSION}")
+else (LIBCAIRO_FOUND)
+    message (FATAL_ERROR "libcairo required but not found")
+endif (LIBCAIRO_FOUND)
+
+
 # fltk
 find_package (FLTK REQUIRED)
 if (FLTK_FOUND)
@@ -332,6 +342,7 @@ include_directories (AFTER
     ${FONTCONFIG_INCLUDE_DIRS}
     ${FLTK_INCLUDE_DIR}
     ${FFTW3F_INC_DIR}
+    ${LIBCAIRO_INCLUDE_DIRS}
 )
 
 set(ExternLibraries
@@ -342,6 +353,7 @@ set(ExternLibraries
     ${JACK_LIBRARIES}
     ${LIBSNDFILE_LIBRARIES}
     ${FFTW3F_LIBRARIES}
+    ${LIBCAIRO_LIBRARIES}
     z
 )
 
