Added circle and spike ADsynth waveshapes Corrected Phaser panning fixed two compiler warnings

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,22 +64,22 @@ option (BuildForDebug "Include gdb debugging support" OFF)
 set (FifoDirectory /dev/shm CACHE STRING "Directory for fifos")
 
 set (BuildOptions_x86_64AMD
-    "-O3 -march=athlon64 -m64 -Wall -ffast-math -fno-finite-math-only -fomit-frame-pointer"
+    "-O3 -march=athlon64 -m64 -Wall -ffast-math -fno-finite-math-only -fomit-frame-pointer -ldl"
   CACHE STRING "X86_64 compiler options"
 )
 
 set (BuildOptions_X86_64Core2
-    "-O3 -march=core2 -m64 -Wall -ffast-math -fno-finite-math-only -fomit-frame-pointer"
+    "-O3 -march=core2 -m64 -Wall -ffast-math -fno-finite-math-only -fomit-frame-pointer -ldl"
   CACHE STRING "X86_64 compiler options"
 )
 
 set (BuildOptionsBasic
-    "-O3 -msse -msse2 -mfpmath=sse -ffast-math -fomit-frame-pointer"
+    "-O3 -msse -msse2 -mfpmath=sse -ffast-math -fomit-frame-pointer -ldl"
     CACHE STRING "basic X86 complier options"
 )
 
 set (BuildOptionsDebug
-    "-O0 -g3 -ggdb -Wall -Wpointer-arith" CACHE STRING "Debug build flags")
+    "-O0 -g3 -ggdb -Wall -Wpointer-arith -ldl" CACHE STRING "Debug build flags")
 
 find_package (PkgConfig REQUIRED)
 if (PKG_CONFIG_FOUND)
@@ -175,6 +175,7 @@ endif (FLTK_FOUND)
 mark_as_advanced (FLTK_DIR)
 mark_as_advanced (FLTK_FLUID_EXECUTABLE)
 mark_as_advanced (FLTK_MATH_LIBRARY)
+
 set (GuiFluids
     UI/WidgetPDialUI.fl  UI/PresetsUI.fl  UI/EnvelopeUI.fl
     UI/LFOUI.fl  UI/FilterUI.fl  UI/VirKeyboardUI.fl
@@ -356,6 +357,8 @@ set(ExternLibraries
     ${LIBCAIRO_LIBRARIES}
     z
 )
+
+set (CMAKE_EXE_LINKER_FLAGS "-ldl")
 
 add_executable (yoshimi ${ProgSources} main.cpp)
 
