- Added compression level to settings. 0 = plain XML save. - Bug fix. Controllers window would sometimes freeze - thanks to Rob Couto for the fix. - Added appdata as requested in the sourceforge features tickets. - Revised 'make install' to make sure everything goes to the right place. - Changed position of Pitch bend roller in Vkeyboard to make things clearer. - Small update to Will_Godfrey_Companion bank.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,7 +20,7 @@ project (Yoshimi)
 cmake_minimum_required (VERSION 2.6)
 cmake_policy (VERSION 2.6)
 cmake_policy (SET CMP0004 OLD)
-set (YOSHIMI_VERSION "1.2.2-rc")
+set (YOSHIMI_VERSION "1.2.2-rc2")
 file (WRITE version.txt "${YOSHIMI_VERSION}")
 
 set (CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -391,6 +391,10 @@ install (FILES ${CMAKE_CURRENT_BINARY_DIR}/yoshimi.desktop
     DESTINATION share/applications)
 install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/yoshimi.png
     DESTINATION share/pixmaps)
+install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/yoshimi.svg
+    DESTINATION share/icons)
+install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/yoshimi.appdata.xml
+    DESTINATION share/appdata)
 
 set_directory_properties (PROPERTIES
     ADDITIONAL_MAKE_CLEAN_FILES "${CMAKE_SOURCE_DIR}/*UI.c* ${CMAKE_SOURCE_DIR}/src/*UI.h"
