Lots of verey small optimisations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -265,7 +265,10 @@ add_definitions (-DNUM_MIDI_PARTS=16)
 add_definitions (-DNUM_MIDI_CHANNELS=16)
 add_definitions (-DMAX_ENVELOPE_POINTS=40)
 
-add_definitions (-DPI=3.1415926536f -DLOG_2=0.693147181f)
+add_definitions (-DPI=3.1415926536f)
+add_definitions (-DTWOPI=6.28318530718f)
+add_definitions (-DHALFPI=1.57079632679f)
+add_definitions (-DLOG_2=0.693147181f)
 
 # these were previously (pointlessly) user configurable
 add_definitions (-DNUM_VOICES=8)
