--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,9 @@ project (Yoshimi)
 cmake_minimum_required (VERSION 2.6)
 cmake_policy (VERSION 2.6)
 cmake_policy (SET CMP0004 OLD)
+if (POLICY CMP0046)
+    cmake_policy (SET CMP0046 OLD)
+endif (POLICY CMP0046)
 set (YOSHIMI_VERSION "1.2.4")
 file (WRITE version.txt "${YOSHIMI_VERSION}")
 
