--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -450,7 +450,7 @@ pkg_check_modules(LV2 REQUIRED lv2>=.0.1.0)
 if (LV2_FOUND)
     message (STATUS "Found lv2 package ${LV2_VERSION}")
 else (LV2_FOUND)
-    message (FATAL_ERROR "LV2 package required but not found")
+    message (FATAL_ERROR "lv2 package required but not found")
 endif (LV2_FOUND)
 add_subdirectory(LV2_Plugin)
 endif (BuildLV2Plugin)
