Commented the reason of removing cmdline from sources in changelog. Renamed console window label postfix to 'reports' from 'console' Made LV2 plugin ON by default.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -66,7 +66,7 @@ option (BuildForDebug "Include gdb debugging support" OFF)
 option (ReportErrorsToConsole "Show errors in console window" ON)
 
 #option to build lv2 plugin
-option (BuildLV2Plugin "Build yoshimi lv2 plugin interface" OFF)
+option (BuildLV2Plugin "Build yoshimi lv2 plugin interface" ON)
 
 set (FifoDirectory /dev/shm CACHE STRING "Directory for fifos")
 
