- moved example files where they should be - some more GUI cleanups

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -393,6 +393,17 @@ install (DIRECTORY ../banks DESTINATION share/yoshimi
         WORLD_READ WORLD_EXECUTE
 )
 
+install (DIRECTORY ../examples DESTINATION share/yoshimi
+    FILE_PERMISSIONS
+        OWNER_READ OWNER_WRITE
+        GROUP_READ GROUP_WRITE
+        WORLD_READ
+    DIRECTORY_PERMISSIONS
+        OWNER_READ OWNER_WRITE OWNER_EXECUTE
+        GROUP_READ GROUP_WRITE GROUP_EXECUTE
+        WORLD_READ WORLD_EXECUTE
+)
+
 install (DIRECTORY ../presets DESTINATION share/yoshimi
     FILE_PERMISSIONS
         OWNER_READ OWNER_WRITE
